--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+# Add PyTorch CUDA 11.8 wheels as fallback
+--extra-index-url https://download.pytorch.org/whl/cu118
+torch==2.6.0
+torchvision==0.21.0
+torchaudio==2.6.0
+
 absl-py==2.2.2
 accelerate==1.5.2
 aiohappyeyeballs==2.6.1
@@ -25,9 +31,9 @@ graphics.py==5.0.1.post1
 grpcio==1.71.0
 huggingface-hub==0.30.1
 idna==3.10
-ipykernel==6.29.5
-ipython==8.37.0
-ipython_pygments_lexers==1.1.1
+#ipykernel==6.29.5
+#ipython==8.37.0
+#ipython_pygments_lexers==1.1.1
 jedi==0.19.2
 Jinja2==3.1.6
 jiwer==3.1.0
@@ -65,7 +71,7 @@ pycparser==2.22
 Pygments==2.19.1
 python-dateutil==2.9.0.post0
 pytz==2025.1
-pywin32==310
+#pywin32==310
 PyYAML==6.0.2
 pyzmq==26.3.0
 RapidFuzz==3.13.0
@@ -83,9 +89,6 @@ tensorboard==2.19.0
 tensorboard-data-server==0.7.2
 threadpoolctl==3.6.0
 tokenizers==0.21.1
-torch==2.6.0+cu118
-torchaudio==2.6.0+cu118
-torchvision==0.21.0+cu118
 tornado==6.4.2
 tqdm==4.67.1
 traitlets==5.14.3
